# Axum-project

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker/dev/: postgres.yml  redis.yml
logs/: app.log.2024-12-12  bin.log.2024-12-17  bin.log.2024-12-19  bin.log.2025-01-03
scripts/: run
settings/: dev.toml  stag.toml
src/: lib.rs
src/controller/: mod.rs  openapi.rs
src/controller/admin/: user.rs
src/controller/auth/: mod.rs
src/controller/employee/: handler.rs  mod.rs
src/controller/server/: handler.rs  mod.rs
src/controller/user/: handler.rs  mod.rs
src/core/: app_state.rs  error.rs  mod.rs  response.rs
src/core/configure/: db.rs  env.rs  mod.rs  secret.rs  sentry.rs  trace.rs
src/domain/: entity.rs  mod.rs  model.rs
src/domain/authenticate/: mod.rs  request.rs  response.rs  services.rs
src/domain/department/: mod.rs
src/domain/employee/: employee_department.rs  employee_position.rs  mod.rs  request.rs  services.rs
src/domain/organization/: mod.rs
src/domain/position/: mod.rs
src/domain/user/: mod.rs  request.rs  response.rs  services.rs
src/infrastructure/: mod.rs
src/infrastructure/middleware/: authenticate.rs  map_response.rs  mod.rs
src/infrastructure/migrations/: m20241216_114200_create_user_table.rs  m20241230_143101_create_organization_table.rs  m20241230_143102_create_position_table.rs  m20241230_143103_create_department_table.rs  m20241230_143104_create_employee_department_table.rs  m20241230_143105_create_employee_position_table.rs  m20241230_143106_create_employee_table.rs  mod.rs
src/infrastructure/persistence/: department_repo.rs  employee_repo.rs  mod.rs  organization_repo.rs  position_repo.rs  postgres.rs  repo_interface.rs  user_repo.rs
src/infrastructure/persistence/redis_client/: instance.rs  mod.rs  services.rs  session.rs
src/util/: claim.rs  constant.rs  file.rs  filter_and_pagination.rs  hash.rs  mod.rs  password.rs  random.rs  task.rs
