[package]
name = "erp_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/main.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

[dependencies]
anyhow = "1.0.94"
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["query", "typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["clock", "serde"] }
config = "0.15.0"
validator = { version = "0.19", features = ["derive"] }
jsonwebtoken = "9.3.0"
lettre = { version = "0.11.11", features = ["tokio1-native-tls", "builder"] }
log = "0.4.22"
log-derive = "0.4.1"
redis = { version = "0.27.6", features = ["tokio-comp", "r2d2"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.2", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_qs = "0.13.0"
strum = { version = "0.26.3", features = ["derive"] }
tera = "1.20.0"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = "1.11.0"
once_cell = "1.20.2"
http = "1.2.0"
futures = "0.3.30"
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "full"] }
tower = { version = "0.5.2", features = ["full"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
sentry = "0.35.0"
time = "0.3.37"